--- a/file/main.css
+++ b/file/main.css
@@ -18,20 +18,20 @@
 	--bg-alt: #fff;
 	--fg: #444;
 	--fg-alt: #222;
-	--primary: #306cc4;
-	--primary-alt: #185dc7;
+	--primary: #4E9F3D;
+	--primary-alt: #4E9F3D;
 	--primary-light: rgba(44, 93, 206, 0.1);
 	--container-shadow: 0 2px 4px rgb(0 0 0 / 10%);
 }
 
 .body-dark {
-	--bg: #030217;
-	--bg-alt: rgb(22 28 41 / 33%);
+	--bg: #222831;
+	--bg-alt: #393E46;
 	--fg: #bdbddd;
 	--fg-alt: #cdcdff;
-	--primary: #807ae8;
-	--primary-alt: #706aec;
-	--primary-light: rgb(18 17 49 / 44%);
+	--primary: #4E9F3D;
+	--primary-alt: #4E9F3D;
+	--primary-light: #222831;
 	--container-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
 		rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
