--- a/file/main.css
+++ b/file/main.css
@@ -12,6 +12,15 @@
 /* ================
 	 1. variables
    ================ */
+body {
+  --logo: url(file/svn.png) no-repeat;
+
+}
+
+body[data-theme="dark"] {
+  --logo: url(file/svn-light.png) no-repeat;
+}
+
 
 .body-light {
 	--bg: #f5f6f7;
