--- a/file/main.css
+++ b/file/main.css
@@ -36,7 +36,7 @@ body[data-theme="dark"] {
 
 .body-dark {
 	--bg: #2C3333;
-	--bg-alt: ##333b3c;
+	--bg-alt: #3c4949;
 	--fg: #fff;
 	--fg-alt: #fff;
 	--primary: #4E9F3D;
